--- a/sass/elements/_buttons.scss
+++ b/sass/elements/_buttons.scss
@@ -74,8 +74,6 @@ a {
 
   span {
     &.icon {
-      position: relative;
-      top: -3px;
       width: 24px !important;
       height: 24px !important;
     }
